# louvorja-multiplatform

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_FIXES_AND_SUGGESTIONS.md  CONTEXT-MAP.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PRD.md  PRESENTATION_EDITOR_ERROR_HANDLING_PROPOSAL.md  PROGRESS.md  QWEN.md  README.md  SKILL.md  TODO.md  fmArquivosFalta_snippet.pas  global.css  index.html  liturgy-details-specs.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.unit-tests.json  vite.config.ts
.claude/: settings.json  settings.local.json
.claude/agents/: i18n-reviewer.md  security-reviewer.md
.claude/skills/: martinholovsky-tauri
.gemini/: GEMINI.md
.github/: copilot-instructions.md
.github/scripts/: check-commands-toml.mjs  generate-bible-db.mjs  inject-updater-config.mjs
.github/workflows/: pr-build.yml  release.yml  remote-perf.yml
.interface-design/: system.md
.qwen/: settings.json  settings.json.orig
.specs/: README.md  SUMMARY.md  audio-playback.03.spec.md  bible.05.spec.md  foundation.01.spec.md  liturgy.06.spec.md  migration-deployment.11.spec.md  multi-monitor.07.spec.md  music-lyrics.02.spec.md  presentation-editor.04.spec.md  streaming.08.spec.md  utilities-polish.10.spec.md  video-multimedia.09.spec.md
CODEX/: AGENTS.md
admin-panel/: package-lock.json  package.json
apps/admin-panel/: .env.example  CLAUDE.md  tailwind.config.ts
apps/desktop/: CLAUDE.md  index.html  package.json  tsconfig.unit-tests.json  vite.config.ts
apps/remote-pwa/: CLAUDE.md  tsconfig.json
conductor/: catcher_rust_utility.md  development-rules.md  index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
docs/: DATABASE_SCHEMA.md  MIGRATION_GUIDE.md  PROJECT_RULES.md  README.md  UPDATER_SETUP.md  USER_GUIDE.md  architecture.md  code-signing-guide.md  play-song-flow.md  tauri-plugins-roadmap.md
docs/archive/: README.md
docs/handoffs/: .gitignore
docs/installation/: linux-es.md  linux-pt.md  linux.md  macos-es.md  macos-pt.md  macos.md  windows-es.md  windows-pt.md  windows.md
docs/performance/: PERFORMANCE-REPORT.md  react-performance.md  review-ipc-events.md  review-react-queries.md  review-rust-backend.md  review-startup-memory.md  rust-performance.md  tauri-performance.md
docs/phase-04-database-populate/: ARCHITECTURE.md  README.md  SUMMARY.md  TASKS.md
docs/phase-08-video-multimedia/: HANDOFF.md  PRD.md  SPECS.md  TASKS.md
docs/phase-09-utilities-polish/: HANDOFF.md  LEARNINGS.md  (+3 more)
legacy-app/: API.md  ELECTRON-APP.md  FILE-VERIFICATION-SYSTEM.md
legacy-reference/: FILE-VERIFICATION-LOGIC.md
louvorja-frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
remote-pwa/: index.html  lighthouserc.json  package.json  vite.config.ts
scripts/: add_i18n_key.py  fix_finalize.py  prepare-sidecar.mjs  seed-hymns.sql  validate-i18n.mjs
src/: button.tsx  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json  projector.json  spotlight.json
src-tauri/permissions/: commands.toml
src-tauri/src/: bible_builder.rs  error.rs  lib.rs  main.rs  projector_process.rs  state.rs  video_server.rs
src-tauri/src/archive/: manifest.rs  mod.rs  pptx.rs
src-tauri/src/audio/: mod.rs  player.rs  sync.rs
src-tauri/src/bible/: mod.rs  text_split.rs
src-tauri/src/commands/: audio.rs  bible.rs  clock.rs  collections.rs  content_sync.rs  display.rs  favorites.rs  legacy_fetch.rs  liturgy.rs  media_integrity.rs  media_library.rs  migration.rs  mod.rs  music.rs  pack_sync.rs  presentation_bridge.rs  remote.rs  schedules.rs  settings.rs  slide_passer.rs  slides.rs  spotlight.rs  streaming.rs  text_tools.rs  timer.rs  updater.rs  utility.rs  video_copy.rs  video_pipeline.rs  video_server.rs  youtube.rs
src-tauri/src/content_sync/: importer.rs  manifest.rs  mod.rs  snapshot.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
src-tauri/src/db/models/: bible.rs  display.rs  mod.rs  music.rs  online_videos.rs  remote.rs  schedules.rs  slides.rs  utilities.rs
src-tauri/src/db/queries/: bible.rs  collections.rs  content_sync.rs  favorites.rs  liturgy.rs  media_library.rs  mod.rs  music.rs  online_videos.rs  remote.rs  schedules.rs  settings.rs  slides.rs
src-tauri/src/db/queries/music/: music_app.rs  music_content_db.rs  music_sync.rs
src-tauri/src/db/queries/schedules/: schedules_generator.rs
src-tauri/src/display/: mod.rs  monitor.rs  projection.rs  window.rs
src-tauri/src/ftp_sync/: client.rs  credentials.rs  mod.rs
src-tauri/src/http_sync/: downloader.rs
src-tauri/src/legacy_fetch/: mod.rs
src-tauri/src/migration/: hymn_importer.rs  mod.rs  service_importer.rs
src-tauri/src/net/: connection_counter.rs  lan_ip.rs  port.rs
src-tauri/src/pack_sync/: executor.rs  mod.rs  planner.rs
src-tauri/src/presentation_bridge/: autostart.rs  config.rs  ipc.rs  launcher.rs  lifecycle.rs  mod.rs  powerpoint.rs
src-tauri/src/remote/: assets.rs  config.rs  dispatcher.rs  events.rs  hmac_util.rs  mod.rs  nonce_cache.rs  pairing.rs  qr.rs  rate_limit.rs  server.rs  state.rs
src-tauri/src/remote/handlers/: audio.rs  display.rs  mod.rs  overlay.rs  search.rs  service.rs  slide.rs  sync.rs  video.rs
src-tauri/src/remote/routes/: health.rs  pair.rs  ws.rs
src-tauri/src/streaming/: mod.rs
src-tauri/src/streaming/templates/: bible.html  music.html  return.html
src-tauri/src/utils/: catcher.rs  mod.rs  paths.rs
src-tauri/src/video/: io_helpers.rs  metadata.rs  mod.rs  mp4_parser.rs  path.rs
src-tauri/src/video_pipeline/: consumer.rs  events.rs  mod.rs  pipeline.rs  runtime.rs  signaling.rs  source.rs  state.rs
src-tauri/src/youtube/: api.rs
src-tauri/src/ytdlp/: binary.rs  downloader.rs  mod.rs
src-tauri/tests/: e2e_pairing.rs  graceful_shutdown.rs  remote_events.rs  video_pipeline_integration.rs
src-tauri/windows/: hooks.nsh
tests/: media-path.test.ts  monitor-resolution.test.ts  spotlight-shortcuts.test.ts  toast-layout.test.ts
(+971 files in other folders)
