[package]
name = "lja_multiplatform"
version = "0.1.0"
description = "New Multiplatform LouvorJA"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "lja_multiplatform"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "louvorja_multiplatform"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2.5.2"
tauri-plugin-updater = "2"
tauri-plugin-fs = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
specta = { version = "2.0.0-rc.20", features = ["chrono"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.15", features = ["typescript"] }

thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rodio = "0.19"
cpal = "0.15"
zip = "2.1"
tempfile = "3"
quick-xml = "0.36"
tauri-plugin-dialog = "2"
blake3 = "1.6"
wait-timeout = "0.2"
which = "7"
rand = "0.8"
display-info = "0.5.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
urlencoding = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
mimalloc = { version = "0.1.48", default-features = false }
walkdir = "2"
suppaftp = { version = "6", features = ["rustls"] }
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
global-hotkey = "0.7"
tao = "0.34"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
