[package]
name = "lja_multiplatform"
version = "0.1.0"
description = "New Multiplatform LouvorJA"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "lja_multiplatform"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "louvorja_multiplatform"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
dotenvy = "0.15"

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2.5.2"
tauri-plugin-updater = "2"
tauri-plugin-fs = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
specta = { version = "2.0.0-rc.20", features = ["chrono"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.15", features = ["typescript"] }

thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rodio = "0.19"
cpal = "0.15"
zip = "2.1"
tempfile = "3"
quick-xml = "0.36"
ppt-rs = { version = "0.2", default-features = false }
tauri-plugin-dialog = "2"
blake3 = "1.6"
wait-timeout = "0.2"
which = "7"
rand = "0.8"
display-info = "0.5.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
urlencoding = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
mimalloc = { version = "0.1.48", default-features = false }
walkdir = "2"
suppaftp = { version = "6", features = ["rustls"] }
# LAN Remote Control deps
axum               = { version = "0.7", features = ["ws", "macros"] }
futures-util       = "0.3"
tower              = "0.5"
tower-http         = { version = "0.5", features = ["fs", "cors", "trace"] }
tokio-tungstenite  = "0.24"
hmac               = "0.12"
subtle             = "2.6"
lru                = "0.12"
qrcode             = "0.14"
include_dir        = "0.7"
base64 = "0.22"
sha2 = "0.10"
bytes = "1"
memmap2 = "0.9"
unicode-normalization = "0.1"
cosmic-text = "0.12"
enigo = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", rev = "a3122e894383aa068ec5365a42994e3ac94ba1b6" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", rev = "dee384d1f9c3ecdc7ce80966fa23e752056812ae" }
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
ioprio = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Storage_FileSystem", "Win32_System_Console"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
global-hotkey = "0.7"
tao = "0.34"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

[dev-dependencies]
wiremock      = "0.6"
ureq          = { version = "2", features = ["json"] }
tungstenite   = "0.24"

[profile.release]
opt-level     = "s"
lto           = "thin"
codegen-units = 4
panic         = "abort"
strip         = true

[profile.dev]
# split-debuginfo="unpacked" avoids slow dsymutil on macOS (no-op on other OSes).
# debug/incremental are controlled via CARGO_PROFILE_DEV_DEBUG/CARGO_INCREMENTAL env vars in CI
# so local dev is not affected.
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 1
debug = false
